# autoconf-archive

./: .gitignore  Makefile.am  configure.ac
tests/: Makefile.am  defs.in  test-aclocal.in  test-autoconf.in  test-fail.in  test-success.in
